<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/newTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nova_task"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="bold"/>


    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/editTextMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/membro"
        android:inputType="text" />


    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/editDateLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/data_task"
        android:inputType="date" />


    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/editTaskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/task_title"
        android:inputType="text" />

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/addTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ic_launcher_background"
        android:text="@string/add_task"
        android:textColor="@android:color/white" />


</LinearLayout>